# Nexus-novel

./: .gitignore  .gitmodules  README.org  Requirements_Gathering_Document.org  classes.uml  database.uml  requirements.txt  rest_api.org  test.py
backend/: README.md  pyproject.toml  setup.py
backend/alembic/: env.py
backend/app/: main.py
backend/app/auth/: dependencies.py  jwt.py
backend/app/models/: author.py  base.py  chapter.py  genre.py  library.py  novel.py  tag.py  user.py
backend/app/routers/: auth.py  chapter.py  config.py  discovery.py  library.py  novel.py
backend/app/schemas/: chapter.py  library.py  novel.py  user.py
backend/app/services/: author_services.py  chapter_services.py  library_services.py  novel_services.py  user_services.py
backend/config/: database.py  reset.py
backend/migrations/: env.py
backend/migrations/versions/: 00d672a1cb4e_add_library_id_to_novels.py  889f5a442a63_set_user_id_in_library_to_nullable_false.py  8b0628939ca4_chapter_number.py  9491914a5675_contentstatus.py  base_baseline.py  c3b249ed9002_chapter_title_to_nullable.py  d6ec55f33cce_num_chapters_collumn.py  f55e5ccfed1d_add_chapter_number.py  f6079683eae9_add_url_field_to_novel_model.py
backend/scripts/: __init__.py  fanficfare.ini  fanfiction_importer.py  get_cover_image.py  get_metadata.py  get_trending.py  novel_downloader.py  splittts.py  stream.py  tts.py
backend/tests/database/: test_models.py
backend/tests/routes/: conftest.py  test_auth.py  test_chapter.py  test_libary.py  test_novel.py
backend/tests/scripts/: test_get_metadata.py  (+1 more)
(+49 files in other folders)
